<resources>
    <string name="app_name">ServiceApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Profile Section -->
    <string name="profile_title">Profile</string>
    <string name="edit">EDIT</string>
    <string name="wallet">MY WALLET</string>
    <string name="share">Share SOD</string>
    <string name="about">About Serve on door</string>

    <string name="share_content">App Name \n \n Content to share about the app i.e the ways of earning through app \n \n Playstore link of app</string>



    <!-- Wallet Section -->
    <string name="wallet_title">\u0020 \u0020SOD WALLET</string>
    <string name="wallet_history">My History</string>
    <string name="balance_title">Balance</string>
    <string name="recharge">Recharge</string>

    <!-- Recharge Section -->
    <string name="recharge_title">Amount</string>
    <string name="recharge_confirm">CONTINUE</string>

    <!-- Recharge Section -->
    <string name="edit_profile_info">All the above information will be used for delivery profile option</string>


</resources>
