<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Profile"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:textColor="@color/profile_text"
            android:textSize="30sp"
            android:paddingLeft="10dp"
            android:fontFamily="sans-serif"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_logout"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MUNAZZA FATMA"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:paddingLeft="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7255093044"
                android:textColor="@color/profile_next_text"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                android:fontFamily="sans-serif-condensed"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/edit"
            android:textColor="@color/edit_color"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold"
            android:id="@+id/edit"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:background="@color/profile_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/profile_section">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                android:id="@+id/wallet">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_wallet"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet"
                    android:textColor="@color/profile_text"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                android:id="@+id/share">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_share"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="@color/profile_text"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/icon"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="@color/profile_text"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:gravity="center" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>